Set overflow to visible to prevent clipping of certain letters on test card titles

--- a/app/styles/helpers.styl
+++ b/app/styles/helpers.styl
@@ -131,7 +131,7 @@
 
 maxTwoLines()
   /* Max Two lines, bit of black magic involved */
-  overflow: hidden;
+  overflow: visible;
   text-overflow: ellipsis;
   display: -webkit-box;
   line-height: 16px; /* fallback */
